--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
   ],
   "authors": [
     {
-      "name": "Sam",
-      "email": "sam@mageplaza.com",
+      "name": "Mageplaza",
+      "email": "hi@mageplaza.com",
       "homepage": "https://www.mageplaza.com",
       "role": "Leader"
     }
