--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,17 @@
   "name": "mageplaza/magento-2-seo-extension",
   "description": "Magento 2 SEO extension",
   "require": {
-    "php": "~5.5.0|~5.6.0|~7.0.0"
+    "php": "~5.5.0|~5.6.0|~7.0.0",
+    "mageplaza/core-m2": "dev-master"
   },
+  "repositories": [
+    {
+      "type": "git",
+      "url":  "https://github.com/mageplaza/core-m2.git"
+    }
+  ],
   "type": "magento2-module",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "license": [
     "OSL-3.0",
     "AFL-3.0"
