--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "description": "Magento 2 SEO extension",
   "require": {
     "php": "~5.5.0|~5.6.0|~7.0.0",
-    "mageplaza/core-m2": "dev-master"
+    "mageplaza/core-m2": "~1.3.0"
   },
   "type": "magento2-module",
   "version": "1.1.1",
