--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "mageplaza/magento-2-seo-extension",
   "description": "Magento 2 SEO extension",
   "require": {
-    "php": "~5.6.5|7.0.2|7.0.4|~7.0.6",
+    "php": "~5.6.5|7.0.2|7.0.4|~7.0.6|~7.*",
     "mageplaza/core-m2": "~1.3.0"
   },
   "type": "magento2-module",
