--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "description": "Magento 2 SEO extension",
   "require": {
     "php": "~5.6.5|7.0.2|7.0.4|~7.0.6|~7.*",
-    "mageplaza/core-m2": "~1.3.0"
+    "mageplaza/core-m2": "dev-master"
   },
   "type": "magento2-module",
   "version": "1.1.1",
