--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "mageplaza/magento-2-seo-extension",
   "description": "Magento 2 SEO extension",
   "require": {
-    "mageplaza/core-m2": "dev-master"
+    "mageplaza/core-m2": "~1.3.0"
   },
   "type": "magento2-module",
   "version": "1.2.0",
