--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,10 @@
   "name": "mageplaza/magento-2-seo-extension",
   "description": "Magento 2 SEO extension",
   "require": {
-    "mageplaza/module-core": "*"
+    "mageplaza/module-core": "^1.3|dev-master"
   },
   "type": "magento2-module",
-  "version": "1.2.2",
+  "version": "1.3.0",
   "license": [
     "OSL-3.0",
     "AFL-3.0"
