--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "mageplaza/magento-2-seo-extension",
   "description": "Magento 2 SEO extension",
   "require": {
-    "mageplaza/module-core": "^1.3|dev-master"
+    "mageplaza/module-core": "*"
   },
   "type": "magento2-module",
   "version": "1.3.0",
