--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,7 @@
   },
   "type": "magento2-module",
   "version": "1.4.1",
-  "license": [
-    "OSL-3.0",
-    "AFL-3.0"
-  ],
+  "license": "Mageplaza License",
   "authors": [
     {
       "name": "Mageplaza",
