--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,12 @@
   "type": "magento2-module",
   "version": "1.4.1",
   "license": "Mageplaza License",
+  "keywords": [
+      "magento 2",
+      "mageplaza",
+      "seo",
+      "magento 2 seo",
+  ],
   "authors": [
     {
       "name": "Mageplaza",
