--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,11 @@
   "name": "mageplaza/magento-2-seo-extension",
   "description": "Magento 2 SEO extension",
   "require": {
-    "mageplaza/module-core": "*"
+    "mageplaza/module-core": "^1.3.9"
   },
   "type": "magento2-module",
-  "version": "2.0.2",
-  "license": "Mageplaza License",
+  "version": "2.1.0",
+  "license": "proprietary",
   "keywords": [
       "magento 2",
       "mageplaza",
