--- a/composer.json
+++ b/composer.json
@@ -8,17 +8,14 @@
   "version": "2.1.0",
   "license": "proprietary",
   "keywords": [
-      "magento 2",
-      "mageplaza",
-      "seo",
-      "magento 2 seo"
+      "magento 2", "mageplaza", "seo", "magento 2 seo"
   ],
   "authors": [
     {
       "name": "Mageplaza",
-      "email": "hi@mageplaza.com",
+      "email": "support@mageplaza.com",
       "homepage": "https://www.mageplaza.com",
-      "role": "Leader"
+      "role": "Technical Support"
     }
   ],
   "autoload": {
