--- a/composer.json
+++ b/composer.json
@@ -2,13 +2,16 @@
   "name": "mageplaza/magento-2-seo-extension",
   "description": "Magento 2 SEO extension",
   "require": {
-    "mageplaza/module-core": "^1.3.9"
+    "mageplaza/module-core": "^1.3.11"
   },
   "type": "magento2-module",
   "version": "2.1.0",
   "license": "proprietary",
   "keywords": [
-      "magento 2", "mageplaza", "seo", "magento 2 seo"
+    "magento 2",
+    "mageplaza",
+    "seo",
+    "magento 2 seo"
   ],
   "authors": [
     {
